feat: create project and config

--- a/prisma/prisma.yml
+++ b/prisma/prisma.yml
@@ -2,6 +2,9 @@ endpoint: ${env:URL_BASE}/default/${env:ENVIROMENT}
 databaseType: document
 datamodel:
   - ./models/user.prisma
+  - ./models/cinema.prisma
+  - ./models/movie.prisma
+  - ./models/ticket.prisma
 
 generate:
   - generator: typescript-client
