--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,2 @@
-dist
-package-lock.json
-node_modules
-.idea
-.vscode
-*.log
-
-prisma/.env
-
-src/media/
-
-.env
-
-*.png
-*.jpg
-*.jpeg
-*.gif
-media/public/preview/
-src/generated/prisma-client/index.ts
-src/generated/prisma-client/prisma-schema.ts
-src/types/generated/prisma-schema.graphql
+node_modules/
+npm-error.log
