--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,33 @@
 version: '3'
 services:
+  app:
+    image: app
+    container_name: app
+    # Where to find the Dockerfile
+    build: .
+    deploy:
+      resources:
+        limits:
+          cpus: "0.15"
+          memory: 250M
+        reservations:
+          cpus: "0.25"
+          memory: 128M
+    # We will override the CMD tp run  in development so we can have a good logging.
+    command: npm start
+    environment: 
+      # Set our enviroment to development
+      - Node_ENV=development
+      # Explicity set port for app so we always know what it is
+      - PORT=3000
+    ports: 
+      #
+      #
+      - 3000:3000
+    depends_on: 
+      - prisma
+    links: 
+      - prisma
   prisma:
     image: prismagraphql/prisma:1.34
     restart: always
